<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shraddha.cmpe277.SensorActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TableLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <TableRow>
           <TextView
               android:id="@+id/TemperatureSensorLabel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/TemperatureSensorLabel"/>

           <TextView
               android:id="@+id/TemperatureSensorValue"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="30dp"
               android:hint="@string/placeholder"/>

       </TableRow>

       <TableRow>
           <TextView
               android:id="@+id/PressureSensorLabel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/PressureSensorLabel"/>

           <TextView
               android:id="@+id/PressureSensorValue"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="30dp"
               android:hint="@string/placeholder"/>

       </TableRow>

       <TableRow>
           <TextView
               android:id="@+id/LightSensorLabel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/LightSensorLabel"/>

           <TextView
               android:id="@+id/LightSensorValue"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="30dp"
               android:hint="@string/placeholder"/>

       </TableRow>
       <TableRow>
           <TextView
               android:id="@+id/HumiditySensorLabel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/HumiditySensorLabel"/>

           <TextView
               android:id="@+id/HumiditySensorValue"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="30dp"
               android:hint="@string/placeholder"/>

       </TableRow>

   </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="uploadSensorData"
        android:text="Upload Sensor data" />

</LinearLayout>
